[package]
name = "twpis"
version = "0.1.0"
authors = ["Travis Brown <travisrobertbrown@gmail.com>"]
description = "A Twitter profile image scraper"
keywords = ["twitter"]
homepage = "https://github.com/travisbrown/twpis"
repository = "https://github.com/travisbrown/twpis"
license-file = "LICENSE"
readme = "README.md"
edition = "2021"
exclude = [ ".github/*", "codecov.yml" ]

[dependencies]
bincode = "2.0.0-beta.2"
clap = { version = "3", features = ["derive"] }
csv="1"
flate2 = "1"
lazy_static = "1.4"
log = "0.4"
regex = "1.4"
reqwest = { version = "0.11", features = ["gzip", "json"] }
simplelog = "0.11"
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wayback-rs = "0.1"
